--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <h1>Hello, world!</h1>
 
-    <a href="/layouts/layout_1/index.html">Layout 1</a>
-    <a href="/layouts/layout_2/index.html">Layout 2</a>
+    <a href="layouts/layout_1/index.html">Layout 1</a>
+    <a href="layouts/layout_2/index.html">Layout 2</a>
 
 
 
