--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="layouts/layout_1/index.html">Layout 1</a>
     <a href="layouts/layout_2/index.html">Layout 2</a>
 
-    <a href="https://tomasz-konecki.github.io/zadanie_12_6/index.html">App 1</a>
+    <a href="https://tomasz-konecki.github.io/zadanie_12_6/">App 1</a>
     <a href="apps/app-2/index.html">App 2</a>
 
 
