--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         </div>
       </section>
 
+      <!-- PORTFOLIO -->
+
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
         <div class="my-auto">
           <h2 class="mb-5">Portfolio</h2>
@@ -112,8 +114,8 @@
 
         <div class="row">
             <div class="col-md-6">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="img/node.png">
+                <div class="card no-gutters">
+                    <img class="card-img-top img-fluid" src="layouts/layout_1/pics/jumbo_1.jpeg">
                     <div class="card-block">
                         <h3 class="card-title p-1">Layout 1</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
@@ -121,8 +123,8 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="img/react.png">
+                <div class="card no-gutters">
+                    <img class="card-img-top img-fluid" src="layouts/layout_2/pics/jumbo-1.jpg">
                     <div class="card-block">
                         <h3 class="card-title p-1">Layout 2</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
