--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -112,118 +113,79 @@
           <h2 class="mb-5">Portfolio</h2>
 
 
-        <div class="row">
+        <div class="row mb-3">
             <div class="col-md-6">
-                <div class="card no-gutters">
-                    <img class="card-img-top img-fluid" src="layouts/layout_1/pics/jumbo_1.jpeg">
-                    <div class="card-block">
+                <div class="card">
+                  <a href="layouts/layout_1/index.html">
+                      <div class="photo">
+                        <img class="card-img-top img-fluid" src="layouts/layout_1/pics/jumbo_1.jpeg">
+                      </div>
+                      <div class="card-block">
                         <h3 class="card-title p-1">Layout 1</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                    </div>
+                      </div>
+                    </a>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card no-gutters">
-                    <img class="card-img-top img-fluid" src="layouts/layout_2/pics/jumbo-1.jpg">
+                <div class="card">
+                  <a href="layouts/layout_2/index.html">
+                    <div class="photo">
+                      <img class="card-img-top img-fluid" src="layouts/layout_2/pics/jumbo-1.jpg">
+                    </div>
                     <div class="card-block">
                         <h3 class="card-title p-1">Layout 2</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
                     </div>
+                  </a>
                 </div>
             </div>
         </div>
 
-
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="img/node.png">
-                    <div class="card-block">
-                        <h3 class="card-title p-1">Layout 1</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="img/react.png">
-                    <div class="card-block">
-                        <h3 class="card-title p-1">Layout 2</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="img/mongo.png">
+                  <a href="apps/app-1/index.html">
+                    <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 1</h3>
+                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet.</p>
+                    </div>
+                  </a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                  <a href="apps/app-2/index.html">
+                    <img class="card-img-top img-fluid" src="img/code-1.png">
+                    <div class="card-block">
+                        <h3 class="card-title p-1">Aplikacja 2</h3>
+                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    </div>
+                  </a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img class="card-img-top img-fluid" src="img/code-1.png">
+                    <div class="card-block">
+                        <h3 class="card-title p-1">Aplikacja 3</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="img/webpack.png">
+                    <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
-                        <h3 class="card-title p-1">Aplikacja 2</h3>
+                        <h3 class="card-title p-1">Aplikacja 4</h3>
                         <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, sed diam nonummy.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5 mt-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
-        </div>
-
-      </section>
-
-
+      <!-- SKILLS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Umiejętności</h2>
@@ -293,6 +255,7 @@
         </div>
       </section>
 
+      <!-- INTERESTS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
