--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <!-- PORTFOLIO -->
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column portfolio" id="portfolio">
         <div class="my-auto">
           <h2 class="mb-5">Portfolio</h2>
 
@@ -122,7 +122,7 @@
                       </div>
                       <div class="card-block">
                         <h3 class="card-title p-1">Layout 1</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                        <p class="card-text p-1">Szablon HTML/CSS utworzony na podstawie projektu graficznego</p>
                       </div>
                     </a>
                 </div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="card-block">
                         <h3 class="card-title p-1">Layout 2</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                        <p class="card-text p-1">Szablon HTML/CSS utworzony na podstawie projektu graficznego</p>
                     </div>
                   </a>
                 </div>
@@ -149,7 +149,7 @@
                     <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 1</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet.</p>
+                        <p class="card-text p-1">Wyszukiwarka krajów.</p>
                     </div>
                   </a>
                 </div>
@@ -160,18 +160,20 @@
                     <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 2</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                        <p class="card-text p-1">Gra - Papier Kamień Nożyce.</p>
                     </div>
                   </a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
+                  <a href="apps/app-3/index.html">
                     <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 3</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                        <p class="card-text p-1">Kanban.</p>
                     </div>
+                  </a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
@@ -258,9 +260,9 @@
       <!-- INTERESTS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">Zainteresowania</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad qui, esse! Nam vitae laudantium aut facere debitis, magni repellendus ratione pariatur labore alias. Dicta incidunt inventore, aut magnam nam, ipsum!</p>
+          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores cupiditate, sapiente amet explicabo voluptate quas quaerat aliquid magni. Inventore quisquam cupiditate deserunt impedit rerum maiores minus laboriosam laudantium corrupti officia!</p>
         </div>
       </section>
 
