--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 2</h3>
-                        <p class="card-text p-1">Gra - Papier Kamień Nożyce.</p>
+                        <p class="card-text p-1">Gra - papier kamień nożyce.</p>
                     </div>
                   </a>
                 </div>
@@ -178,11 +178,13 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
+                  <a href="apps/app-4/index.html">
                     <img class="card-img-top img-fluid" src="img/code-1.png">
                     <div class="card-block">
                         <h3 class="card-title p-1">Aplikacja 4</h3>
-                        <p class="card-text p-1">Lorem ninja ipsum dolor sit amet, sed diam nonummy.</p>
+                        <p class="card-text p-1">Losowanie cytatów.</p>
                     </div>
+                  </a>
                 </div>
             </div>
         </div>
@@ -239,6 +241,7 @@
             </li>
           </ul>
 
+<!-- 
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -255,14 +258,30 @@
               Agile Development &amp; Scrum</li>
           </ul>
         </div>
+-->
       </section>
 
       <!-- INTERESTS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Zainteresowania</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad qui, esse! Nam vitae laudantium aut facere debitis, magni repellendus ratione pariatur labore alias. Dicta incidunt inventore, aut magnam nam, ipsum!</p>
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores cupiditate, sapiente amet explicabo voluptate quas quaerat aliquid magni. Inventore quisquam cupiditate deserunt impedit rerum maiores minus laboriosam laudantium corrupti officia!</p>
+
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Technologie webowe</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Montaż filmowy</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Muzyka</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Język angielski</li>
+            </ul>
+        </div>
+
         </div>
       </section>
 
