--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <div class="subheading mb-5">· tel · 501-573-864 ·
             <a href="mailto:tomasz.konecki.75@gmail.com">tomasz.konecki.75@gmail.com</a>
           </div>
-          <p class="mb-5">Jestem absolwentem bootcampu Web Developer, organizowanego przez Kodillę. Szukam pracy w nowo wyuczonym zawodzie.</p>
+          <p class="mb-1">Jestem absolwentem bootcampu Web Developer, organizowanego przez szkołę programowania Kodilla. </p>
+          <p class="mb-5">Szukam pracy w nowo wyuczonym zawodzie.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/tomasz-konecki-08689010b/" target="_blank">
